--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/resources/fonts/font-icomoon/style.css">
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/resources/fonts/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/resources/fonts/font-linearicons/style.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/resources/chartist/dist/chartist.min.css">
   <style>
     .rfq__initial__loading {
       position: fixed;
