hide login component

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/resources/fonts/font-linearicons/style.css">
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/resources/chartist/dist/chartist.min.css">
   <style>
-    .rfq__initial__loading {
+    .utils__loadingPage {
       position: fixed;
+      z-index: 19999;
       top: 0;
       left: 0;
       width: 100%;
@@ -34,7 +35,7 @@
     JavaScript needs to be enabled to run this app.
   </noscript>
   <div id="root">
-    <div class="rfq__initial__loading"></div>
+    <div class="utils__loadingPage"></div>
   </div>
 </body>
 
