--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     }
   </style>
 </head>
-<body class="cat__config--vertical cat__theme--light cat__config--shadow">
+<body>
   <noscript>
     JavaScript needs to be enabled to run this app.
   </noscript>
